--- a/views/register.jet.html
+++ b/views/register.jet.html
@@ -5,42 +5,43 @@
 {{block body()}}
 <div class="row justify-content-center mt-5">
     <div class="col-lg-6">
-        <form class='form-group border rounded shadow bg-primary font-weight-bold p-4'>
+        <form method="POST" action="/register" class='form-group border rounded shadow bg-primary font-weight-bold p-4 needs-validation' novalidate>
+            <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
             <h4 class='text-center text-light mb-4'>Register</h4>
             <small class='text-light'>* All fields are required</small>
 
             <div class="mb-3 mt-1">
                 <div class="input-group">
                     <input class="form-control required" id="username" required autocomplete="off" type='text'
-                        name='username' placeholder='username' value=''>
+                        name='username' placeholder='username' value='{{ user.Username }}'>
                 </div>
             </div>
 
             <div class="mb-3">
                 <div class="input-group">
                     <input class="form-control required" id="first_name" required autocomplete="off" type='text'
-                        name='first_name' placeholder='first name' value=''>
+                        name='first_name' placeholder='first name' value='{{ user.FirstName }}'>
                 </div>
             </div>
 
             <div class="mb-3">
                 <div class="input-group">
                     <input class="form-control required" id="last_name" required autocomplete="off" type='text'
-                        name='last_name' placeholder='last name' value=''>
+                        name='last_name' placeholder='last name' value='{{ user.LastName }}'>
                 </div>
             </div>
 
             <div class="mb-3">
                 <div class="input-group">
                     <input class="form-control required" id="email" required autocomplete="off" type='email'
-                        name='email' placeholder='email@email.com' value=''>
+                        name='email' placeholder='email@email.com' value='{{ user.Email }}'>
                 </div>
             </div>
 
             <div class="mb-3">
                 <div class="input-group">
                     <input class="form-control required" id="password" required autocomplete="off" type='password'
-                        name='password' placeholder='password' value=''>
+                        name='password' placeholder='password' value='{{ user.Password }}'>
                 </div>
             </div>
             <small class='text-light'>* Password should be greater than 10 characters and have at least one
